CSS - Fix topbar on small screens
Improves theme page styling to prevent overflow issues within the topbar

--- a/assets/common.css
+++ b/assets/common.css
@@ -145,9 +145,11 @@ body {
 	opacity: 1;
 }
 .content__customiser {
-	display: flex;
+	display: grid;
 	height: 100vh;
-	padding-top: 50px;
+	grid-template-rows: auto auto;
+	grid-template-columns: auto 1fr;
+	grid-template-areas: "top top" "left right";
 }
 .content__browse {
 	padding-bottom: 32px;
